2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Trivially refactor.

	* src/roff/troff/input.cpp (token::next): Rename statement label
	to use documentary terminology.
	* src/roff/troff/node.cpp (make_composite_node,
	make_glyph_node): Make functions static since nothing outside
	this translation unit calls them.
	* src/roff/troff/node.cpp (make_glyph_node): Refactor optional
	argument and its usage.  Put it down, flip it, and reverse it.
	That is, demote its type from `int` to `bool`, invert its sense,
	and rename it since it affects warning, not error, diagnostics.
	(character_exists): Update only call site of `make_glyph_node()`
	that uses non-default argument value.

2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Adjust diagnostic message text to clarify and better
	match terminology used in documentation.

	* src/roff/troff/input.cpp (set_escape_char, do_overstrike,
	do_bracket, do_name_test, do_width, do_special):
	* src/roff/troff/node.cpp (suppress_node::tprint): Migrate from
	"escape" to "escape sequence".

	* src/roff/troff/node.cpp (make_composite_node,
	make_glyph_node): Clarify what went wrong.

	* src/roff/troff/input.cpp (token::get_char,
	check_missing_character): Migrate from "normal character" to
	"ordinary character" (see groff_char(7)).

2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Rename a function for clarity.

	* src/roff/troff/input.cpp (add_to_node_list): Rename this...
	(add_to_zero_width_node_list): ...to this.
	(do_zero_width): Update call site.
	* src/roff/troff/token.h: Update declaration.

2022-06-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (handle_unknown_desc_command):
	Refactor to skip unnecessary string comparisons.  We explicitly
	return in the final case instead of falling off the end of this
	void function for consistency if additional cases are added.
